--- a/Bundle-Adjust.ipynb
+++ b/Bundle-Adjust.ipynb
@@ -64264,143 +64264,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Computing Fundamental Matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "R1:  [[1. 0. 0.]\n [0. 1. 0.]\n [0. 0. 1.]]\nt1:  [0. 0. 0.]\nR2:  [[ 1.00000000e+00  0.00000000e+00  0.00000000e+00]\n [ 0.00000000e+00  2.22044605e-16 -1.00000000e+00]\n [ 0.00000000e+00  1.00000000e+00  2.22044605e-16]]\nt2:  [0. 1. 1.]\nF:  [[ 0.00000000e+00  1.21038718e+00  2.71174032e+03]\n [ 1.21038718e+00  0.00000000e+00  0.00000000e+00]\n [-3.28225574e+03  0.00000000e+00  0.00000000e+00]]\n"
-    }
-   ],
-   "source": [
-    "from scipy.spatial.transform import Rotation as R\n",
-    "#Bundle adjustment code: https://scipy-cookbook.readthedocs.io/items/bundle_adjustment.html\n",
-    "\n",
-    "# Get rotation vector\n",
-    "rot_vec_1 = R.from_rotvec(camera_1.get_rotation())\n",
-    "R1 = rot_vec_1.as_matrix()\n",
-    "print(\"R1: \", R1)\n",
-    "#Get translation vector\n",
-    "t1 = camera_1.get_translation()\n",
-    "print('t1: ', t1)\n",
-    "\n",
-    "#Get intrinsic matrix\n",
-    "K1 = camera_1.get_camera_matrix()\n",
-    "\n",
-    "# Get rotation vector\n",
-    "rot_vec_2 = R.from_rotvec(camera_2.get_rotation())\n",
-    "R2 = rot_vec_2.as_matrix()\n",
-    "print(\"R2: \", R2)\n",
-    "#Get translation vector\n",
-    "t2 = camera_2.get_translation()\n",
-    "print('t2: ', t2)\n",
-    "\n",
-    "#Get intrinsic matrix\n",
-    "K2 = camera_2.get_camera_matrix()\n",
-    "\n",
-    "# --- Now compute relevant quantities for F estimation ------\n",
-    "#Camera matrix basics: http://www.cs.cmu.edu/~16385/s17/Slides/11.1_Camera_matrix.pdf\n",
-    "#Fundamental matrix computation: https://rb.gy/dd0nz2\n",
-    "\n",
-    "#Compute projection matrices\n",
-    "P1 = np.matmul(K1, np.concatenate((R1, t1[:, np.newaxis]), axis=1))\n",
-    "P2 = np.matmul(K2, np.concatenate((R2, t2[:, np.newaxis]), axis=1))\n",
-    "\n",
-    "#Get camera center (view 1)\n",
-    "R1_inv = np.linalg.inv(R1) \n",
-    "C = np.matmul(-R1_inv, t1)\n",
-    "C = np.append(C, 1)\n",
-    "\n",
-    "F = np.matmul(skew(np.matmul(P2, C)), np.matmul(P2, np.linalg.pinv(P1)))\n",
-    "print('F: ', F)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "epipolar_folder = './epipolar_lines/'\n",
-    "if not os.path.exists(epipolar_folder):\n",
-    "    os.makedirs(epipolar_folder)\n",
-    "\n",
-    "for i in range(ind_start,ind_end):\n",
-    "    # load image\n",
-    "    top_img = (read_image(path_images[0][i], flip=False) * 255).astype(np.uint8)\n",
-    "    bottom_img = (read_image(path_images[1][i], flip=False) * 255).astype(np.uint8)\n",
-    "\n",
-    "    #Recall, indices 0 and 2 correspond to bottom image\n",
-    "    x_t = joined_list_2d[1]['x_coords'][i][:,np.newaxis]\n",
-    "    y_t = joined_list_2d[1]['y_coords'][i][:,np.newaxis]\n",
-    "\n",
-    "    x_b = joined_list_2d[0]['x_coords'][i][:,np.newaxis]\n",
-    "    y_b = joined_list_2d[0]['y_coords'][i][:,np.newaxis]\n",
-    "\n",
-    "    points_top = np.concatenate((x_t,y_t), axis=1)\n",
-    "    points_bot = np.concatenate((x_b,y_b), axis=1)\n",
-    "\n",
-    "    \n",
-    "    #Get rid of nans\n",
-    "    \n",
-    "    points_bot = points_bot.astype(np.int32)\n",
-    "    points_bot = points_bot[~np.isnan(points_bot).any(axis=1)]\n",
-    "\n",
-    "    points_top = points_top.astype(np.int32)\n",
-    "    points_top = points_top[~np.isnan(points_top).any(axis=1)]\n",
-    "\n",
-    "\n",
-    "    top_img_with_points = draw_circles(top_img, points_top)\n",
-    "    bot_img_with_points = draw_circles(bottom_img, points_bot)\n",
-    "    #cv2.imwrite('epipolar_lines/top_image_points.jpg', top_img_with_points)\n",
-    "    #cv2.imwrite('epipolar_lines/bot_image_points.jpg', bot_img_with_points)\n",
-    "\n",
-    "    #Homogenize points\n",
-    "    ones = np.ones(points_top.shape[0])[:,np.newaxis]\n",
-    "    points_top_homog = np.concatenate((points_top, ones), axis=-1)\n",
-    "    points_bot_homog = np.concatenate((points_bot, ones), axis=-1)\n",
-    "    \n",
-    "    aug_F = np.tile(F, (points_top_homog.shape[0], 1, 1))\n",
-    "    lines_bot = np.squeeze(np.matmul(aug_F, points_top_homog[:,:,np.newaxis]))\n",
-    "    #This^ gives us lines as vectors [a,b,c] --> ax + by + c = 0\n",
-    "\n",
-    "    for line_vec in lines_bot:\n",
-    "        #Get x and y intercepts (on image) to plot\n",
-    "        #y = 0: x = -c/a\n",
-    "        x_intercept = int(-line_vec[2] / line_vec[0])\n",
-    "        #x = 0: y = -c/b\n",
-    "        y_intercept = int(-line_vec[2] / line_vec[1])\n",
-    "        bottom_img = drawLine(bottom_img, x_intercept, 0, 0, y_intercept)\n",
-    "        #bottom_img = cv2.line(bottom_img, (x_intercept, 0), (0, y_intercept), (255, 255, 255), thickness=1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "    cv2.imwrite(f'epipolar_lines/bot_{i}.jpg', bottom_img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_video(image_dir=epipolar_folder, out_file=\"epipolar_video.mp4\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Plot Bundle Adjusted Through Time"
    ]
   },
@@ -64444,162 +64307,11 @@
    ]
   },
   {
+   "source": [
+    "# Plot Skeleton"
+   ],
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Triangulate w/ temporal constraint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "n_joints = pose_list_2d_orig[0]['x_coords'].shape[-1]\n",
-    "n_frames = pose_list_2d_orig[0]['x_coords'].shape[0]\n",
-    "\n",
-    "points_2d_triangulate = np.empty((info_dict[\"num_cameras\"], n_frames, n_joints, 2))\n",
-    "for i, pose_dict in enumerate(pose_list_2d_orig):\n",
-    "    x_coord = pose_dict['x_coords']\n",
-    "    y_coord = pose_dict['y_coords']\n",
-    "    coord_slice = np.transpose(np.asarray([x_coord, y_coord]), axes=(1, 2, 0))\n",
-    "\n",
-    "    points_2d_triangulate[i] = coord_slice\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "optim_3d_pts = cam_group.triangulate_optim(points_2d_triangulate, scale_smooth=0.05)\n",
-    "optim_3d_pts_total = np.reshape(optim_3d_pts, (optim_3d_pts.shape[0] * optim_3d_pts.shape[1], optim_3d_pts.shape[2]))\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "points_2d_reproj_triang = np.concatenate((camera_1.project(optim_3d_pts_total).squeeze(), camera_2.project(optim_3d_pts_total).squeeze()), axis=0)\n",
-    "pose_list_2d_triang_reproj =  arr_2d_to_list_of_dicts(points_2d_reproj_triang, info_dict)\n",
-    "joined_list_2d_triang = pose_list_2d_orig + pose_list_2d_triang_reproj\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "#### 3d plot\n",
-    "from matplotlib.gridspec import GridSpec\n",
-    "import mpl_toolkits.mplot3d.axes3d as p3\n",
-    "from utils.utils_plotting import plot_image_labels, plot_3d_points\n",
-    "\n",
-    "%matplotlib inline\n",
-    "\n",
-    "fig = plt.figure(constrained_layout=True, figsize = (12,6))\n",
-    "gs = GridSpec(1, 1, figure=fig)\n",
-    "ax1 = fig.add_subplot(gs[:2, 0])\n",
-    "image_folder = 'images_test'\n",
-    "if not os.path.exists(image_folder):\n",
-    "    os.makedirs(image_folder)\n",
-    "\n",
-    "ax2.view_init(elev=0, azim=90) # see https://stackoverflow.com/questions/12904912/how-to-set-camera-position-for-3d-plots-using-python-matplotlib\n",
-    "\n",
-    "for i in range(ind_start,ind_end):\n",
-    "    # clear both ax1 and ax2\n",
-    "    ax1.cla()\n",
-    "    # load image\n",
-    "    img = read_image(path_images[i], flip=False)\n",
-    "\n",
-    "    plot_image_labels(img,\\\n",
-    "                        joined_list_2d_triang,\n",
-    "                        i,\n",
-    "                        color_list_2d,\n",
-    "                        ax = ax1, top_img_height=TOP_IMG_HEIGHT)\n",
-    "    \n",
-    "    ax2.azim += 1\n",
-    "    if i == 157:\n",
-    "        print(path_images[i])\n",
-    "\n",
-    "    plt.show()\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "only_new=False\n",
-    "only_orig=False\n",
-    "\n",
-    "\n",
-    "#Test initialization\n",
-    "rot_vec_3 = R.from_rotvec(camera_1.init_rot)\n",
-    "R3 = rot_vec_3.as_matrix()\n",
-    "t3 = camera_1.init_trans\n",
-    "\n",
-    "rot_vec_4 = R.from_rotvec(camera_2.init_rot)\n",
-    "R4 = rot_vec_4.as_matrix()\n",
-    "t4 = camera_2.init_trans\n",
-    "\n",
-    "\n",
-    "scale_factor=0.5\n",
-    "\n",
-    "# Annotate cameras (origins and vectors)\n",
-    "data_1 = vector_plot([scale_factor*R1[:,0],scale_factor*R1[:,1],scale_factor*R1[:,2]], orig=t1,cam_name='1_new')\n",
-    "data_2 = vector_plot([scale_factor*R2[:,0],scale_factor*R2[:,1],scale_factor*R2[:,2]], orig=t2, cam_name='2_new')\n",
-    "\n",
-    "data_3 = vector_plot([scale_factor*R3[:,0],scale_factor*R3[:,1],scale_factor*R3[:,2]], orig=t3, cam_name='1_og')\n",
-    "data_4 = vector_plot([scale_factor*R4[:,0],scale_factor*R4[:,1],scale_factor*R4[:,2]], orig=t4, cam_name='2_og')\n",
-    "\n",
-    "data_5  = [go.Scatter3d(x=optim_3d_pts_total[:,0], y=optim_3d_pts_total[:,1], z=optim_3d_pts_total[:,2], mode='markers', marker=dict(size=2))]\n",
-    "layout = go.Layout(\n",
-    "            margin = dict(l = 4,\n",
-    "                        r = 4,\n",
-    "                        b = 4,\n",
-    "                        t = 4)\n",
-    "                )\n",
-    "if only_new:\n",
-    "        data = data_1 + data_2 + data_5\n",
-    "elif only_orig:\n",
-    "        data = data_3 + data_4 + data_5\n",
-    "else:\n",
-    "        data = data_1 + data_2 + data_3 + data_4 + data_5\n",
-    "\n",
-    "\n",
-    "fig = go.Figure(data=data,layout=layout)\n",
-    "fig.update_traces(textfont_size=6)\n",
-    "\n",
-    "fig.show()\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Plot skeleton"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
